<resources>
    <string name="app_name">BooksChannel</string>
    <string name="action_settings">ログアウト</string>
    <string name="action_mypage">マイページ</string>
    <string name="action_ranking">ランキング</string>
    <string name="welcome">ようこそ！</string>

    <string name="ranking_more">もっと見る</string>
    <string name="title_recent">最近読まれた本</string>
    <string name="ranking_user_weekly_title">本を読んでる人ランキング</string>
    <string name="ranking_book_weekly_title">社内で読まれた本ランキング</string>
    <string name="failed_data_set">予期せぬデータが見つかりました</string>
    <string name="failed_load">通信エラーが発生しました</string>
    <string name="acitivity_title_recent">最近社内で読まれた本</string>
    <string name="acitivity_title_book_list">本一覧</string>
    <string name="acitivity_title_user_ranking">本を読んでる人ランキング</string>
    <string name="acitivity_title_book_ranking">読まれている本ランキング</string>
    <string name="ranking_weekly">週間ランキング</string>
    <string name="ranking_total">総合ランキング</string>
    <string name="notify_list_empty">データがありません</string>
    <string name="prompt_login">あなたのプロフィールを教えてください。</string>
    <string name="login_google">Googleアカウントでログインする</string>
    <string name="loging_in">ログインしています</string>
    <string name="failed_login">ログインできませんでした...</string>
    <string name="successed_login">ログインに成功しました！</string>
    <string name="label_post_review">レビューを書く！</string>
    <string name="label_edit_review">レビューを修正する</string>
    <string name="action_amazon">アマゾンで開く</string>
    <string name="title_reviews">最近のレビュー</string>
    <string name="failed_load_isbn">ISBNコードを読み取れませんでした</string>
    <string name="label_review">レビューを見る</string>
    <string name="prompt_comment">どんな人におすすめ？</string>
    <string name="submit">送信</string>
    <string name="cancel">キャンセル</string>
    <string name="error">エラー</string>
    <string name="loading">通信中</string>
    <string name="empty_review">５段階評価は必須です</string>
    <string name="title_users_with_this_book">読んだ人一覧</string>
    <string name="title_stacks">読みたい本</string>
    <string name="title_stacked_users">読みたい人たち</string>
    <string name="empty_book">情報の取得に時間がかかっています。\nしばらくしてからご確認ください</string>
    <string name="prompt_new">おすすめの本を\nみんなに教えてあげよう！</string>
    <string name="activity_all_users">登録ユーザ一覧</string>
    <string name="title_follower">フォロワー</string>
    <string name="label_follow">フォローする</string>
    <string name="label_unfollow">フォロー中</string>
    <string name="succeed_follow">フォローしました！</string>
    <string name="succeed_unfollow">フォローを解除しました</string>
    <string name="prompt_follow">あの人の読んでる本をチェックしよう！</string>
    <string name="label_find_from_ranking">ランキングから探す</string>
    <string name="label_find_from_list">一覧から探す</string>
    <string name="rating">５段階評価(必須)</string>
    <string name="comment">コメント(任意)</string>
    <string name="empty_comment">コメントはありません</string>
    <string name="label_reviews_more">他のレビューを見る</string>
    <string name="title_review_edit">レビュー編集画面タイトル</string>
    <string name="label_confirm_review">自分のレビューを\n確認する</string>
    <string name="label_update_review">自分のレビューです</string>
    <string name="loading_review">レビュー状態を確認しています</string>
    <string name="loading_follow">確認中</string>
    <string name="failed_read_clipboard">クリップボードの内容を読み取れませんでした</string>
    <string name="label_open_amazon">Amazonに行く</string>
    <string name="label_read_clipboard">クリップボードのURLを\n読み込む</string>
    <string name="desc_url_1">Amazonで本を検索してURLをコピーする</string>
    <string name="desc_url_2">コピーしたURLを読み込ませる</string>
    <string name="desc_url_3">本のページが自動的に開きます</string>
    <string name="activity_book">本のページ</string>
    <string name="activity_user">ユーザのページ</string>
    <string name="failed_find_chrome">ログインにはChromeブラウザが必要です</string>
    <string name="suffix_rating_average">%d件の評価</string>
    <string name="loading_button">状態取得中</string>
    <string name="prompt_review">あなたもレビューを投稿しよう！</string>
    <string name="label_mine">自分のページ</string>
    <string name="activity_mypage">マイページ</string>
    <string name="label_lender">貸せます</string>
    <string name="title_book_ranking">読まれた本</string>
    <string name="title_user_ranking">読んだ人</string>

    <string name="label_share_before">社内に\nシェアする</string>
    <string name="label_share_after">レビューを\n編集する</string>
    <string name="message_posted_review">レビューを投稿しました！</string>
    <string name="message_updated_review">レビューを更新しました！</string>

    <string name="label_wish_before">読みたいリスト\nに追加する</string>
    <string name="label_wish_after">読みたい登録中</string>
    <string name="confirm_delete_wish">読みたいリストから削除しますか？</string>
    <string name="message_posted_wish">読みたいリストに追加しました！</string>
    <string name="message_deleted_wish">読みたいリストから削除しました</string>

    <string name="label_lend_before">貸出ＯＫ！</string>
    <string name="label_lend_after">貸出登録中</string>
    <string name="confirm_delete_lend">貸出登録を解除しますか？</string>
    <string name="message_posted_rental">貸出登録を行いました！</string>
    <string name="message_deleted_rental">貸出登録を解除しました</string>

    <string name="format_score_book">%d人に読まれました</string>
    <string name="format_score_user">%d冊読みました</string>
    <string name="label_follower">フォロワー %d</string>
    <string name="label_followee">フォロー %d</string>
    <string name="activity_followers">フォロワー一覧</string>
    <string name="activity_followees">フォロー一覧</string>
    <string name="confirm_unfollow">フォローを解除しますか？</string>
    <string name="confirmation">確認</string>
    <string name="title_histories">シェアした本</string>
    <string name="barcode_status">バーコードの中心と赤線の中心を合わせてください</string>
</resources>

