<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/prompt_follow"
        />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="64dp"
        />


    <info.hoang8f.widget.FButton
        android:id="@+id/find_from_list_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:buttonColor="#ff225b1e"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColor="#ddfafafa"
        android:textSize="16sp"
        android:text="@string/label_find_from_list"
        />

    <info.hoang8f.widget.FButton
        android:id="@+id/find_from_ranking_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:buttonColor="#ff225b1e"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColor="#ddfafafa"
        android:textSize="16sp"
        android:text="@string/label_find_from_ranking"
        />

</LinearLayout>