<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:background="@drawable/bg_dialog"
    >

    <TextView
        android:id="@+id/label_post_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/prompt_new"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#111111"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/alternative"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:padding="12dp"
        android:layout_below="@id/label_post_review"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        >

        <ImageView
            android:id="@+id/with_camera_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/with_camera"
            />

        <ImageView
            android:id="@+id/with_url_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/with_amazon"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/by_camera"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        android:layout_below="@id/label_post_review"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        >

        <com.journeyapps.barcodescanner.CompoundBarcodeView
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@+id/camera_desc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/desc_isbn"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/by_url"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="invisible"
        android:layout_below="@id/label_post_review"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_url_1"
            android:layout_gravity="left"
            android:textSize="15sp"
            />

        <info.hoang8f.widget.FButton
            android:id="@+id/amazon_top_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textColor="#ddfafafa"
            app:buttonColor="#ffa18320"
            android:textSize="15sp"
            android:text="@string/label_open_amazon"
            />

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/arrow_next"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_url_2"
            android:layout_gravity="left"
            android:textSize="15sp"
            />
        <info.hoang8f.widget.FButton
            android:id="@+id/read_clipboard_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textColor="#ddfafafa"
            app:buttonColor="#ffa18320"
            android:textSize="15sp"
            android:text="@string/label_read_clipboard"
            />

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/arrow_next"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_url_3"
            android:layout_gravity="center"
            android:textSize="15sp"
            />

    </LinearLayout>


</RelativeLayout>